After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742572 - qtdemux: EOS emitted after 10 seconds on a audio/mp4a file [REGRESSION]
qtdemux: EOS emitted after 10 seconds on a audio/mp4a file [REGRESSION]
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal blocker
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-01-08 09:13 UTC by Philippe Normand
Modified: 2015-01-09 14:46 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Philippe Normand 2015-01-08 09:13:46 UTC
It plays fine with 1.4.5 but with git master we get EOS too early. 

http://base-art.net/static/Keshia%20Knight%20Pulliam%20Fired!-SfNzx5cRBvQ.m4a
Comment 1 Thiago Sousa Santos 2015-01-09 14:46:32 UTC
commit 3e0be85840d1d587039cd88fba158a82e5442dfb
Author: Thiago Santos <thiagoss@osg.samsung.com>
Date:   Fri Jan 9 11:40:40 2015 -0300

    qtdemux: fix stream time conversion
    
    Use the right macro to convert to the correct scale or the
    segment information will be wrong
    
    https://bugzilla.gnome.org/show_bug.cgi?id=742572